# betza-visualizer

./: .gitignore  AGENT.md  AGENTS.md  README.md  betza_parser.py  debug_tui.txt  fsf_built_in_variant_properties.json  fsf_built_in_variants_catalog.json  index.html  jest.config.js  main.py  package.json  parse_cpp.py  piece_catalog.json  pyproject.toml  requirements.txt  style.css  style.tcss  tsconfig.json  variant_ini_parser.py  vercel.json
.github/workflows/: publish.yml  tui_tests.yml  web_tests.yml
betza_visualizer/: __init__.py  betza_parser.py  svg.py
jules-scratch/verification/: verify_catalog.py
src/: betza_parser.ts  main.ts  svg_utils.ts  types.ts  variant_ini_parser.ts
tests/: betza_parser.test.ts  test_betza_parser.py  test_tui.py  test_variant_filter.py  test_web_app.py  test_xiangqi_elephant.py  variants.ini
tests/pytest_tests/: test_tui.py  test_web_app.py
tests/python_unittests/: test_betza_parser.py  test_fsf_built_in_variants_catalog.py  test_svg_renderer.py  test_variant_filter.py  test_variant_ini_parser.py  test_xiangqi_elephant.py
tests/yarn_tests/: betza_parser.test.ts  svg_utils.test.ts  variant_ini_parser.test.ts
