[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "betza-visualizer"
version = "0.1.0"
authors = [
  { name="gbtami", email="your@email.com" },
]
description = "A textual application for visualizing Betza notation for fairy chess pieces."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/gbtami/betza-visuaizer"
"Bug Tracker" = "https://github.com/gbtami/betza-visuaizer/issues"

[tool.ruff]
# Set the maximum line length to 120 characters.
line-length = 120

[tool.ruff.lint]
# Select the rule codes to enable. 'E' and 'F' are enabled by default.
select = ["E", "F"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
