[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "betza-visualizer"
version = "0.1.0"
authors = [
  { name="gbtami", email="gbtami@gmail.com" },
]
description = "Reusable Betza notation parser and movement diagram visualizer."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
tui = [
    "textual",
    "textual-fspicker",
]
catalog-tools = [
    "requests",
]
dev = [
    "build",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-playwright",
    "requests",
    "textual",
    "textual-fspicker",
]

[project.urls]
"Homepage" = "https://github.com/gbtami/betza-visualizer"
"Bug Tracker" = "https://github.com/gbtami/betza-visualizer/issues"

[tool.setuptools.packages.find]
include = ["betza_visualizer*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
